fix overflow issue

--- a/src/pages/Play/style.module.scss
+++ b/src/pages/Play/style.module.scss
@@ -173,7 +173,7 @@
 }
 .submit-wrapper {
   position: absolute;
-  bottom: 4.5em;
+  bottom: 15vh;
   opacity: 0.4;
   appearance: none;
   width: 76%;
