--- a/src/reset.scss
+++ b/src/reset.scss
@@ -3,6 +3,10 @@ html {
   font-size: 16px;
 }
 
+html, body {
+  overflow: hidden;
+}
+
 * {
   outline: none;
 }
